PROJECT(xdb)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/ ${CMAKE_ROOT}/Modules/   )

FIND_PACKAGE(Sqlite3 REQUIRED)

set(PostgreSQL_ADDITIONAL_VERSIONS "9.3")
FIND_PACKAGE(PostgreSQL)

INCLUDE_DIRECTORIES(
        include
        ${SQLITE3_INCLUDE_DIR}
        ${PostgreSQL_INCLUDE_DIRS}

)

ADD_DEFINITIONS( -std=c++11 )

ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(test)


